# rust_spider

./: Cargo.toml  result.txt  settings.toml
src/: lib.rs  main.rs
src/config/: config.rs  mod.rs
src/scrape/: mod.rs  scrape.rs
