[package]
name = "rust_spider"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

reqwest = {version="*"}
tokio = {version="*", features=["full"]}
scraper = "*"
config = "*"
serde = {version="*", features=["derive"]}
toml = "*"
